<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
	</parent>
	<groupId>no.nav.dokarkiv</groupId>
	<artifactId>dokarkiv</artifactId>
	<version>1-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>dokarkiv</name>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>dokumentproduksjoninfo</module>
		<module>arkiverdokumentproduksjon</module>
		<module>arkiverdokumentmottak</module>
		<module>behandlejournal</module>
		<module>innsynjournal</module>
		<module>inngaaendejournal</module>
		<module>behandleinngaaendejournal</module>
		<module>journal</module>
		<module>journalfoerinngaaende</module>
		<module>hentdokument</module>
		<module>logiskslettdokument</module>
		<module>hentjournalinfo</module>
	</modules>

	<distributionManagement>
		<repository>
			<id>m2internal</id>
			<name>NAV Internal Repository</name>
			<url>dav:http://maven.adeo.no/nexus/content/repositories/m2internal</url>
		</repository>
		<snapshotRepository>
			<id>m2snapshot</id>
			<name>NAV Snapshot Repository</name>
			<url>dav:http://maven.adeo.no/nexus/content/repositories/m2snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.scm.id>stash</project.scm.id>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<oracle.version>12.2.0.1</oracle.version>
		<cxf.version>3.2.6</cxf.version>
		<flyway.version>4.2.0</flyway.version>
		<swagger.version>2.8.0</swagger.version>
		<freg.security.test.version>3.1.0</freg.security.test.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>app</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>1-SNAPSHOT</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>dokumentproduksjoninfo</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkiverdokumentmottak</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>behandlejournal</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>innsynjournal</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>inngaaendejournal</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>behandleinngaaendejournal</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>journalfoerinngaaende</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>journal</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>hentdokument</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>logiskslettdokument</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>hentjournalinfo</artifactId>
				<version>1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.oracle</groupId>
				<artifactId>ojdbc8</artifactId>
				<version>${oracle.version}</version>
			</dependency>
			<dependency>
				<groupId>com.oracle</groupId>
				<artifactId>ucp</artifactId>
				<version>${oracle.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-ws-security</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>1.2.5.RELEASE</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<artifactId>freg-security-test-oidc-tools</artifactId>
				<groupId>no.nav.freg</groupId>
				<version>${freg.security.test.version}</version>
				<scope>test</scope>
			</dependency>

			<!--Swagger-->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>1.0</version>
			</extension>
		</extensions>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.0.1</version>
					<configuration>
						<doclint>none</doclint>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<additionalClasspathElements>${basedir}/target/classes</additionalClasspathElements>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.22.0</version>
				<reportSets>
					<reportSet>
						<id>integration-tests</id>
						<reports>
							<report>failsafe-report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>